change localization using provider

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,5 +2,9 @@
   "appTitle": "إسلامي",
   "surahNames": "اسم السورة",
   "ahadeth": "الأحاديث",
-  "surahVerses": "عدد الآيات"
-  }
+  "surahVerses": "عدد الآيات",
+  "english": "اللغه الإنجليزية",
+  "arabic": "اللغه العربية",
+  "language": "اللغه",
+  "mode": "السمات"
+     }
