--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,5 +2,9 @@
   "appTitle": "Islami",
   "surahNames": "Surah Name",
   "ahadeth": "Ahadeth",
-  "surahVerses": "Surah Verses"
+  "surahVerses": "Surah Verses",
+  "english": "English",
+  "arabic": "Arabic",
+  "language": "Language",
+  "mode": "Mode"
   }
