--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -6,5 +6,7 @@
   "english": "اللغه الإنجليزية",
   "arabic": "اللغه العربية",
   "language": "اللغه",
-  "mode": "السمات"
+  "mode": "السمات",
+  "light": "فاتح",
+   "dark": "داكن"
      }
