--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,5 +6,7 @@
   "english": "English",
   "arabic": "Arabic",
   "language": "Language",
-  "mode": "Mode"
+  "mode": "Mode",
+  "light": "Light",
+  "dark": "Dark"
   }
